[package]

edition = "2024"
name = "yellowstone-grpc-command"
version = "0.1.0"
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.97"
backoff = {version = "0.4.0", features = ["tokio"]}
clap = {version = "4.5.35", features = ["derive"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
tokio = {version = "1.44.2", features = ["rt-multi-thread", "fs"]}
tokio-stream = "0.1.17"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
