[package]

edition = "2024"
name = "yellowstone-grpc-command"
version = "0.1.0"
[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.97"
backoff = {version = "0.4.0", features = ["tokio"]}
chrono = "0.4.40"
clap = {version = "4.5.35", features = ["derive"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
maplit = "1.0.2"
serde_json = "1.0.105"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
tokio = {version = "1.44.2", features = ["rt-multi-thread", "fs"]}
tokio-stream = "0.1.17"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
